feature auto cancell of reservs when del an obj
